--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-Oefening QR code
+<html>
+<head>
+  <title>Sinterklaasgedicht</title>
+  <style>
+    body{
+    font-family: 'Droid Serif', serif;
+    font-size: 14px;
+    color: #2f2f2f;
+    background-color: #f9f7f1;
+    }
+    h1{
+    font-weight: 700;
+    font-size: 30px;
+    text-transform: uppercase;
+    padding: 10px 0 10px 0;
+    }
+    h2{
+    font-weight: 700;
+    font-size: 12px;
+    box-sizing: border-box;
+    padding: 10px 0 10px 0;
+    }
+  </style>
+</head>
+<body>
+  <div width: 500px; text-align: center>
+  <h1>Pakjesavond keert terug</h1>
+  <h2>door Sint Nikolaas</h2>
+  <p>Dit is een gedicht
+    Bla bla Bla
+    La la la boot schoen appel
+    En toen was het klaar
+    Dit is een gedicht
+      Bla bla Bla
+      La la la boot schoen appel
+      En toen was het klaar
+      Dit is een gedicht
+        Bla bla Bla
+        La la la boot schoen appel
+        En toen was het klaar
+        Dit is een gedicht
+          Bla bla Bla
+          La la la boot schoen appel
+          En toen was het klaar
+    </p>
+  </div>
+</body>
+</html>
+
