--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div width: 500px; text-align: center>
   <h1>Pakjesavond keert terug</h1>
   <h2>door Sint Nikolaas</h2>
-  <p>Dit is een gedicht
+  <pre>Dit is een gedicht
     Bla bla Bla
     La la la boot schoen appel
     En toen was het klaar
@@ -41,9 +41,7 @@
         Dit is een gedicht
           Bla bla Bla
           La la la boot schoen appel
-          En toen was het klaar
-    </p>
+          En toen was het klaar</pre>
   </div>
 </body>
 </html>
-
